Increment is work

--- a/num2x/index.html
+++ b/num2x/index.html
@@ -7,7 +7,20 @@
     <title>num2x</title>
 </head>
 <body>
-    
+    <div>
+        <div id="num">
+            <span id="result">0</span> 
+        </div>
+        <div id="xnum">
+            <button id="one-x">1x</button>
+            <button id="two-x">2x</button>
+            <button id="five-x">5x</button>
+        </div>
+        <div class="equal-btn">
+            <button id="increment">inc</button>
+            <button id="decrement">dec</button>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
